#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Anatoly Karp
#			Internet2
#
#	Date:		Fri Oct 18 17:53:58 EDT 2002
#
#	Description:	install scripts/OWP files

plibdir = $(bindir)/OWP

plib_DATA = Conf.pm Digest.pm RawIO.pm Syslog.pm Utils.pm
